--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ apply plugin: 'application'
 
 group 'TheProudBFF'
 version '0.0.1'
-mainClassName = "com.theorangeteam.ApplicationKt"
+mainClassName = "io.ktor.server.netty.EngineMain"
 
 sourceSets {
     main.kotlin.srcDirs = main.java.srcDirs = ['src']
