--- a/build.gradle
+++ b/build.gradle
@@ -30,9 +30,11 @@ repositories {
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     compile "io.ktor:ktor-server-netty:$ktor_version"
+    compile "io.ktor:ktor-gson:$ktor_version"
     compile "ch.qos.logback:logback-classic:$logback_version"
-    compile "io.ktor:ktor-jackson:$ktor_version"
+    implementation "com.squareup.moshi:moshi:1.8.0"
     testCompile "io.ktor:ktor-server-tests:$ktor_version"
+    testCompile "junit:junit:4.12"
 }
 
 task stage(dependsOn: ['build', 'clean'])
