--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ sourceSets {
 repositories {
     mavenLocal()
     jcenter()
+    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
@@ -33,8 +34,11 @@ dependencies {
     compile "io.ktor:ktor-gson:$ktor_version"
     compile "ch.qos.logback:logback-classic:$logback_version"
     implementation "com.squareup.moshi:moshi:1.8.0"
+    implementation 'com.github.husnjak:IGDB-API-JVM:0.5'
+    
     testCompile "io.ktor:ktor-server-tests:$ktor_version"
     testCompile "junit:junit:4.12"
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0"
 }
 
 task stage(dependsOn: ['build', 'clean'])
