--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,18 @@ defaults: &defaults
   docker:
     - image: circleci/openjdk:11.0.2
 
+aliases:
+  - &restore_cache
+    restore_cache:
+      keys:
+      - v1-dependencies-{{ checksum "build.gradle" }}
+
+  - &save_cache
+    save_cache:
+      paths:
+      - ~/.gradle
+      key: v1-dependencies-{{ checksum "build.gradle" }}
+
 jobs:
   build:
     <<: *defaults
@@ -12,11 +24,13 @@ jobs:
       - run:
           name: Load Dependencies and Build
           command: ./gradlew build
+      - *save_cache
 
   test:
     <<: *defaults
     steps:
       - checkout
+      - *restore_cache
       - run:
           name: Run Unit Tests
           command: ./gradlew test
