--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ apply plugin: 'application'
 group 'TheProudBFF'
 version '0.0.1'
 mainClassName = "io.ktor.server.netty.EngineMain"
+applicationDefaultJvmArgs = ["-Xmx512m"]
 
 sourceSets {
     main.kotlin.srcDirs = main.java.srcDirs = ['src']
