Change Procfile call

--- a/build.gradle
+++ b/build.gradle
@@ -41,8 +41,7 @@ dependencies {
     testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0"
 }
 
-task stage(dependsOn: ['build', 'clean'])
-build.mustRunAfter clean
+task stage(dependsOn: 'build')
 
 gradle.taskGraph.whenReady {
     taskGraph ->
