Reorganize package distribution

--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,10 @@ dependencies {
     compile "io.ktor:ktor-server-jetty:$ktor_version"
     compile "io.ktor:ktor-gson:$ktor_version"
     compile "ch.qos.logback:logback-classic:$logback_version"
+
+    implementation(group = "com.github.kittinunf.fuel", name = "fuel", version = "-SNAPSHOT")
+    implementation(group = "com.github.kittinunf.fuel", name = "fuel-coroutines", version = "-SNAPSHOT")
+    implementation(group = "com.github.kittinunf.fuel", name = "fuel-kotlinx-serialization", version = "-SNAPSHOT")
     implementation "com.squareup.moshi:moshi:1.8.0"
     implementation 'com.github.husnjak:IGDB-API-JVM:0.5'
     
