--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,10 @@ buildscript {
     }
 }
 
+plugins {
+    id 'java'
+}
+
 apply plugin: 'kotlin'
 apply plugin: 'application'
 
@@ -22,6 +26,15 @@ sourceSets {
     test.resources.srcDirs = ['testresources']
 }
 
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'com.theorangeteam.Main'
+        )
+    }
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+}
+
 repositories {
     mavenLocal()
     jcenter()
@@ -29,10 +42,10 @@ repositories {
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    compile "io.ktor:ktor-server-jetty:$ktor_version"
-    compile "io.ktor:ktor-gson:$ktor_version"
-    compile "ch.qos.logback:logback-classic:$logback_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "io.ktor:ktor-server-jetty:$ktor_version"
+    implementation "io.ktor:ktor-gson:$ktor_version"
+    implementation "ch.qos.logback:logback-classic:$logback_version"
     implementation "com.squareup.moshi:moshi:1.8.0"
     implementation 'com.github.husnjak:IGDB-API-JVM:0.5'
     
