--- a/build.gradle
+++ b/build.gradle
@@ -45,10 +45,12 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'kotlin')
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile "io.ktor:ktor-server-jetty:$ktor_version"
+    compile "io.ktor:ktor-client-apache:$ktor_version"
     compile "io.ktor:ktor-gson:$ktor_version"
     compile "ch.qos.logback:logback-classic:$logback_version"
     compile "com.squareup.moshi:moshi:1.8.0"
     compile 'com.github.husnjak:IGDB-API-JVM:0.5'
+    compile 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.1'
     
     testCompile "io.ktor:ktor-server-tests:$ktor_version"
     testCompile "junit:junit:4.12"
