--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,7 @@ jar {
 
 repositories {
     mavenLocal()
+    mavenCentral()
     jcenter()
     maven { url 'https://jitpack.io' }
 }
@@ -46,13 +47,16 @@ repositories {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'kotlin')
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compile 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.1'
+    
     compile "io.ktor:ktor-server-jetty:$ktor_version"
     compile "io.ktor:ktor-client-apache:$ktor_version"
     compile "io.ktor:ktor-gson:$ktor_version"
     compile "ch.qos.logback:logback-classic:$logback_version"
+    
     compile "com.squareup.moshi:moshi:1.8.0"
     compile 'com.github.husnjak:IGDB-API-JVM:0.5'
-    compile 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.1'
+    compile group: 'com.google.firebase', name: 'firebase-admin', version: '6.7.0'
     
     testCompile "io.ktor:ktor-server-tests:$ktor_version"
     testCompile "junit:junit:4.12"
