--- a/resources/application.conf
+++ b/resources/application.conf
@@ -7,4 +7,9 @@ ktor {
     application {
         modules = [ com.theorangeteam.ApplicationKt.module ]
     }
+
+    jwt {
+        audience = "https://identitytoolkit.googleapis.com/google.identity.identitytoolkit.v1.IdentityToolkit"
+        realm = "The Proud BFF"
+    }
 }
