--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,8 @@ dependencies {
     compile "io.ktor:ktor-client-apache:$ktor_version"
     compile "io.ktor:ktor-gson:$ktor_version"
     compile "io.ktor:ktor-auth:$ktor_version"
+    compile "io.ktor:ktor-auth-jwt:$ktor_version"
+    compile "com.auth0:java-jwt:3.3.0"
     compile "ch.qos.logback:logback-classic:$logback_version"
     
     compile "com.squareup.moshi:moshi:1.8.0"
